// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OpenAPI 3 generator HTTP verbs DELETE endpoint 1`] = `
"{
  \\"openapi\\": \\"3.0.2\\",
  \\"info\\": {
    \\"title\\": \\"contract\\",
    \\"version\\": \\"0.0.0\\"
  },
  \\"paths\\": {
    \\"/users/{id}\\": {
      \\"delete\\": {
        \\"operationId\\": \\"DeleteEndpoint\\",
        \\"parameters\\": [
          {
            \\"name\\": \\"id\\",
            \\"in\\": \\"path\\",
            \\"required\\": true,
            \\"schema\\": {
              \\"type\\": \\"string\\"
            }
          }
        ],
        \\"responses\\": {
          \\"204\\": {
            \\"description\\": \\"204 response\\"
          }
        }
      }
    }
  }
}"
`;

exports[`OpenAPI 3 generator HTTP verbs GET endpoint 1`] = `
"{
  \\"openapi\\": \\"3.0.2\\",
  \\"info\\": {
    \\"title\\": \\"contract\\",
    \\"version\\": \\"0.0.0\\"
  },
  \\"paths\\": {
    \\"/users\\": {
      \\"get\\": {
        \\"operationId\\": \\"GetEndpoint\\",
        \\"responses\\": {
          \\"200\\": {
            \\"description\\": \\"200 response\\",
            \\"content\\": {
              \\"application/json\\": {
                \\"schema\\": {
                  \\"type\\": \\"array\\",
                  \\"items\\": {
                    \\"type\\": \\"object\\",
                    \\"properties\\": {
                      \\"id\\": {
                        \\"type\\": \\"string\\"
                      },
                      \\"name\\": {
                        \\"type\\": \\"string\\"
                      }
                    },
                    \\"required\\": [
                      \\"id\\",
                      \\"name\\"
                    ]
                  }
                }
              }
            }
          }
        }
      }
    }
  }
}"
`;

exports[`OpenAPI 3 generator HTTP verbs PATCH endpoint 1`] = `
"{
  \\"openapi\\": \\"3.0.2\\",
  \\"info\\": {
    \\"title\\": \\"contract\\",
    \\"version\\": \\"0.0.0\\"
  },
  \\"paths\\": {
    \\"/users/{id}\\": {
      \\"patch\\": {
        \\"operationId\\": \\"PatchEndpoint\\",
        \\"parameters\\": [
          {
            \\"name\\": \\"id\\",
            \\"in\\": \\"path\\",
            \\"required\\": true,
            \\"schema\\": {
              \\"type\\": \\"string\\"
            }
          }
        ],
        \\"requestBody\\": {
          \\"content\\": {
            \\"application/json\\": {
              \\"schema\\": {
                \\"type\\": \\"object\\",
                \\"properties\\": {
                  \\"name\\": {
                    \\"type\\": \\"string\\"
                  }
                },
                \\"required\\": [
                  \\"name\\"
                ]
              }
            }
          },
          \\"required\\": true
        },
        \\"responses\\": {
          \\"200\\": {
            \\"description\\": \\"200 response\\",
            \\"content\\": {
              \\"application/json\\": {
                \\"schema\\": {
                  \\"type\\": \\"object\\",
                  \\"properties\\": {
                    \\"id\\": {
                      \\"type\\": \\"string\\"
                    },
                    \\"name\\": {
                      \\"type\\": \\"string\\"
                    }
                  },
                  \\"required\\": [
                    \\"id\\",
                    \\"name\\"
                  ]
                }
              }
            }
          }
        }
      }
    }
  }
}"
`;

exports[`OpenAPI 3 generator HTTP verbs POST endpoint 1`] = `
"{
  \\"openapi\\": \\"3.0.2\\",
  \\"info\\": {
    \\"title\\": \\"contract\\",
    \\"version\\": \\"0.0.0\\"
  },
  \\"paths\\": {
    \\"/users\\": {
      \\"post\\": {
        \\"operationId\\": \\"PostEndpoint\\",
        \\"parameters\\": [],
        \\"requestBody\\": {
          \\"content\\": {
            \\"application/json\\": {
              \\"schema\\": {
                \\"type\\": \\"object\\",
                \\"properties\\": {
                  \\"name\\": {
                    \\"type\\": \\"string\\"
                  }
                },
                \\"required\\": [
                  \\"name\\"
                ]
              }
            }
          },
          \\"required\\": true
        },
        \\"responses\\": {
          \\"201\\": {
            \\"description\\": \\"201 response\\",
            \\"content\\": {
              \\"application/json\\": {
                \\"schema\\": {
                  \\"type\\": \\"object\\",
                  \\"properties\\": {
                    \\"id\\": {
                      \\"type\\": \\"string\\"
                    },
                    \\"name\\": {
                      \\"type\\": \\"string\\"
                    }
                  },
                  \\"required\\": [
                    \\"id\\",
                    \\"name\\"
                  ]
                }
              }
            }
          }
        }
      }
    }
  }
}"
`;

exports[`OpenAPI 3 generator HTTP verbs PUT endpoint 1`] = `
"{
  \\"openapi\\": \\"3.0.2\\",
  \\"info\\": {
    \\"title\\": \\"contract\\",
    \\"version\\": \\"0.0.0\\"
  },
  \\"paths\\": {
    \\"/users/{id}\\": {
      \\"put\\": {
        \\"operationId\\": \\"PutEndpoint\\",
        \\"parameters\\": [
          {
            \\"name\\": \\"id\\",
            \\"in\\": \\"path\\",
            \\"required\\": true,
            \\"schema\\": {
              \\"type\\": \\"string\\"
            }
          }
        ],
        \\"requestBody\\": {
          \\"content\\": {
            \\"application/json\\": {
              \\"schema\\": {
                \\"type\\": \\"object\\",
                \\"properties\\": {
                  \\"name\\": {
                    \\"type\\": \\"string\\"
                  }
                },
                \\"required\\": [
                  \\"name\\"
                ]
              }
            }
          },
          \\"required\\": true
        },
        \\"responses\\": {
          \\"200\\": {
            \\"description\\": \\"200 response\\",
            \\"content\\": {
              \\"application/json\\": {
                \\"schema\\": {
                  \\"type\\": \\"object\\",
                  \\"properties\\": {
                    \\"id\\": {
                      \\"type\\": \\"string\\"
                    },
                    \\"name\\": {
                      \\"type\\": \\"string\\"
                    }
                  },
                  \\"required\\": [
                    \\"id\\",
                    \\"name\\"
                  ]
                }
              }
            }
          }
        }
      }
    }
  }
}"
`;

exports[`OpenAPI 3 generator contract with multiple servers OpenAPI 3 1`] = `
"{
  \\"openapi\\": \\"3.0.2\\",
  \\"info\\": {
    \\"title\\": \\"contract\\",
    \\"version\\": \\"0.0.0\\"
  },
  \\"paths\\": {},
  \\"servers\\": [
    {
      \\"url\\": \\"https://{username}.gigantic-server.com:{port}/{basePath}\\",
      \\"variables\\": {
        \\"username\\": {
          \\"default\\": \\"demo\\"
        },
        \\"port\\": {
          \\"default\\": \\"8443\\",
          \\"enum\\": [
            \\"8443\\",
            \\"443\\"
          ]
        },
        \\"basePath\\": {
          \\"default\\": \\"v2\\"
        }
      }
    },
    {
      \\"url\\": \\"https://{username}.gigantic-server.com:{port}/{basePath}\\",
      \\"variables\\": {
        \\"username\\": {
          \\"default\\": \\"dev\\"
        },
        \\"port\\": {
          \\"default\\": \\"8080\\",
          \\"enum\\": [
            \\"8080\\",
            \\"8081\\"
          ]
        },
        \\"basePath\\": {
          \\"default\\": \\"v2\\"
        }
      }
    }
  ]
}"
`;

exports[`OpenAPI 3 generator contract with one server OpenAPI 3 1`] = `
"{
  \\"openapi\\": \\"3.0.2\\",
  \\"info\\": {
    \\"title\\": \\"contract\\",
    \\"version\\": \\"0.0.0\\"
  },
  \\"paths\\": {},
  \\"servers\\": [
    {
      \\"url\\": \\"https://{username}.gigantic-server.com:{port}/{basePath}\\",
      \\"description\\": \\"Production server\\",
      \\"variables\\": {
        \\"username\\": {
          \\"default\\": \\"demo\\"
        },
        \\"port\\": {
          \\"default\\": \\"8443\\",
          \\"enum\\": [
            \\"8443\\",
            \\"443\\"
          ]
        },
        \\"basePath\\": {
          \\"default\\": \\"v2\\"
        }
      }
    }
  ]
}"
`;

exports[`OpenAPI 3 generator examples contract with examples parses correctly to an openapi specification 1`] = `
"{
  \\"openapi\\": \\"3.0.2\\",
  \\"info\\": {
    \\"title\\": \\"contract\\",
    \\"version\\": \\"0.0.0\\"
  },
  \\"paths\\": {
    \\"/users\\": {
      \\"get\\": {
        \\"operationId\\": \\"EndpointWithExampleOnHeaders\\",
        \\"parameters\\": [
          {
            \\"name\\": \\"Accept-Language\\",
            \\"in\\": \\"header\\",
            \\"description\\": \\"property-example description\\",
            \\"required\\": true,
            \\"schema\\": {
              \\"type\\": \\"string\\"
            },
            \\"examples\\": {
              \\"property-example\\": {
                \\"value\\": \\"property-example-value\\"
              }
            }
          }
        ],
        \\"responses\\": {
          \\"200\\": {
            \\"description\\": \\"200 response\\",
            \\"content\\": {
              \\"application/json\\": {
                \\"schema\\": {
                  \\"type\\": \\"array\\",
                  \\"items\\": {
                    \\"type\\": \\"object\\",
                    \\"properties\\": {
                      \\"id\\": {
                        \\"type\\": \\"string\\"
                      },
                      \\"name\\": {
                        \\"type\\": \\"string\\"
                      }
                    },
                    \\"required\\": [
                      \\"id\\",
                      \\"name\\"
                    ]
                  }
                }
              }
            }
          }
        }
      }
    }
  }
}"
`;

exports[`OpenAPI 3 generator headers endpoint with request headers 1`] = `
"{
  \\"openapi\\": \\"3.0.2\\",
  \\"info\\": {
    \\"title\\": \\"contract\\",
    \\"version\\": \\"0.0.0\\"
  },
  \\"paths\\": {
    \\"/users\\": {
      \\"get\\": {
        \\"operationId\\": \\"EndpointWithRequestHeaders\\",
        \\"parameters\\": [
          {
            \\"name\\": \\"Accept-Encoding\\",
            \\"in\\": \\"header\\",
            \\"required\\": false,
            \\"schema\\": {
              \\"type\\": \\"string\\"
            }
          },
          {
            \\"name\\": \\"Accept-Language\\",
            \\"in\\": \\"header\\",
            \\"required\\": true,
            \\"schema\\": {
              \\"type\\": \\"string\\"
            }
          }
        ],
        \\"responses\\": {
          \\"200\\": {
            \\"description\\": \\"200 response\\",
            \\"content\\": {
              \\"application/json\\": {
                \\"schema\\": {
                  \\"type\\": \\"array\\",
                  \\"items\\": {
                    \\"type\\": \\"object\\",
                    \\"properties\\": {
                      \\"id\\": {
                        \\"type\\": \\"string\\"
                      },
                      \\"name\\": {
                        \\"type\\": \\"string\\"
                      }
                    },
                    \\"required\\": [
                      \\"id\\",
                      \\"name\\"
                    ]
                  }
                }
              }
            }
          }
        }
      }
    }
  }
}"
`;

exports[`OpenAPI 3 generator headers endpoint with response headers 1`] = `
"{
  \\"openapi\\": \\"3.0.2\\",
  \\"info\\": {
    \\"title\\": \\"contract\\",
    \\"version\\": \\"0.0.0\\"
  },
  \\"paths\\": {
    \\"/users\\": {
      \\"post\\": {
        \\"operationId\\": \\"EndpointWithResponseHeaders\\",
        \\"parameters\\": [],
        \\"requestBody\\": {
          \\"content\\": {
            \\"application/json\\": {
              \\"schema\\": {
                \\"type\\": \\"object\\",
                \\"properties\\": {
                  \\"name\\": {
                    \\"type\\": \\"string\\"
                  }
                },
                \\"required\\": [
                  \\"name\\"
                ]
              }
            }
          },
          \\"required\\": true
        },
        \\"responses\\": {
          \\"201\\": {
            \\"description\\": \\"201 response\\",
            \\"headers\\": {
              \\"Location\\": {
                \\"required\\": true,
                \\"schema\\": {
                  \\"type\\": \\"string\\"
                }
              },
              \\"Link\\": {
                \\"required\\": false,
                \\"schema\\": {
                  \\"type\\": \\"string\\"
                }
              }
            },
            \\"content\\": {
              \\"application/json\\": {
                \\"schema\\": {
                  \\"type\\": \\"object\\",
                  \\"properties\\": {
                    \\"id\\": {
                      \\"type\\": \\"string\\"
                    },
                    \\"name\\": {
                      \\"type\\": \\"string\\"
                    }
                  },
                  \\"required\\": [
                    \\"id\\",
                    \\"name\\"
                  ]
                }
              }
            }
          }
        }
      }
    }
  }
}"
`;

exports[`OpenAPI 3 generator intersection types evaluates intersection type 1`] = `
"{
  \\"openapi\\": \\"3.0.2\\",
  \\"info\\": {
    \\"title\\": \\"contract\\",
    \\"version\\": \\"0.0.0\\"
  },
  \\"paths\\": {
    \\"/users\\": {
      \\"get\\": {
        \\"operationId\\": \\"IntersectionType\\",
        \\"responses\\": {
          \\"200\\": {
            \\"description\\": \\"200 response\\",
            \\"content\\": {
              \\"application/json\\": {
                \\"schema\\": {
                  \\"allOf\\": [
                    {
                      \\"type\\": \\"object\\",
                      \\"properties\\": {
                        \\"id\\": {
                          \\"type\\": \\"string\\"
                        }
                      },
                      \\"required\\": [
                        \\"id\\"
                      ]
                    },
                    {
                      \\"type\\": \\"object\\",
                      \\"properties\\": {
                        \\"name\\": {
                          \\"type\\": \\"string\\"
                        }
                      },
                      \\"required\\": [
                        \\"name\\"
                      ]
                    }
                  ]
                }
              }
            }
          }
        }
      }
    }
  }
}"
`;

exports[`OpenAPI 3 generator minimal contract produces minimal OpenAPI 3 1`] = `
"{
  \\"openapi\\": \\"3.0.2\\",
  \\"info\\": {
    \\"title\\": \\"contract\\",
    \\"version\\": \\"0.0.0\\"
  },
  \\"paths\\": {}
}"
`;

exports[`OpenAPI 3 generator path params endpoint with path params 1`] = `
"{
  \\"openapi\\": \\"3.0.2\\",
  \\"info\\": {
    \\"title\\": \\"contract\\",
    \\"version\\": \\"0.0.0\\"
  },
  \\"paths\\": {
    \\"/companies/{companyId}/users/{userId}\\": {
      \\"get\\": {
        \\"operationId\\": \\"EndpointWithPathParams\\",
        \\"parameters\\": [
          {
            \\"name\\": \\"companyId\\",
            \\"in\\": \\"path\\",
            \\"required\\": true,
            \\"schema\\": {
              \\"type\\": \\"string\\"
            }
          },
          {
            \\"name\\": \\"userId\\",
            \\"in\\": \\"path\\",
            \\"required\\": true,
            \\"schema\\": {
              \\"type\\": \\"string\\"
            }
          }
        ],
        \\"responses\\": {
          \\"200\\": {
            \\"description\\": \\"200 response\\",
            \\"content\\": {
              \\"application/json\\": {
                \\"schema\\": {
                  \\"type\\": \\"object\\",
                  \\"properties\\": {
                    \\"id\\": {
                      \\"type\\": \\"string\\"
                    },
                    \\"name\\": {
                      \\"type\\": \\"string\\"
                    }
                  },
                  \\"required\\": [
                    \\"id\\",
                    \\"name\\"
                  ]
                }
              }
            }
          }
        }
      }
    }
  }
}"
`;

exports[`OpenAPI 3 generator query params endpoint with array query param 1`] = `
"{
  \\"openapi\\": \\"3.0.2\\",
  \\"info\\": {
    \\"title\\": \\"contract\\",
    \\"version\\": \\"0.0.0\\"
  },
  \\"paths\\": {
    \\"/companies\\": {
      \\"get\\": {
        \\"operationId\\": \\"EndpointWithArrayQueryParam\\",
        \\"parameters\\": [
          {
            \\"name\\": \\"countries\\",
            \\"in\\": \\"query\\",
            \\"style\\": \\"form\\",
            \\"explode\\": true,
            \\"required\\": true,
            \\"schema\\": {
              \\"type\\": \\"array\\",
              \\"items\\": {
                \\"type\\": \\"string\\"
              }
            }
          }
        ],
        \\"responses\\": {
          \\"200\\": {
            \\"description\\": \\"200 response\\",
            \\"content\\": {
              \\"application/json\\": {
                \\"schema\\": {
                  \\"type\\": \\"array\\",
                  \\"items\\": {
                    \\"type\\": \\"object\\",
                    \\"properties\\": {
                      \\"id\\": {
                        \\"type\\": \\"string\\"
                      },
                      \\"name\\": {
                        \\"type\\": \\"string\\"
                      }
                    },
                    \\"required\\": [
                      \\"id\\",
                      \\"name\\"
                    ]
                  }
                }
              }
            }
          }
        }
      }
    }
  }
}"
`;

exports[`OpenAPI 3 generator query params endpoint with array query param and comma serialization strategy 1`] = `
"{
  \\"openapi\\": \\"3.0.2\\",
  \\"info\\": {
    \\"title\\": \\"contract\\",
    \\"version\\": \\"0.0.0\\"
  },
  \\"paths\\": {
    \\"/companies\\": {
      \\"get\\": {
        \\"operationId\\": \\"EndpointWithArrayQueryParam\\",
        \\"parameters\\": [
          {
            \\"name\\": \\"countries\\",
            \\"in\\": \\"query\\",
            \\"style\\": \\"form\\",
            \\"explode\\": false,
            \\"required\\": true,
            \\"schema\\": {
              \\"type\\": \\"array\\",
              \\"items\\": {
                \\"type\\": \\"string\\"
              }
            }
          }
        ],
        \\"responses\\": {
          \\"200\\": {
            \\"description\\": \\"200 response\\",
            \\"content\\": {
              \\"application/json\\": {
                \\"schema\\": {
                  \\"type\\": \\"array\\",
                  \\"items\\": {
                    \\"type\\": \\"object\\",
                    \\"properties\\": {
                      \\"id\\": {
                        \\"type\\": \\"string\\"
                      },
                      \\"name\\": {
                        \\"type\\": \\"string\\"
                      }
                    },
                    \\"required\\": [
                      \\"id\\",
                      \\"name\\"
                    ]
                  }
                }
              }
            }
          }
        }
      }
    }
  }
}"
`;

exports[`OpenAPI 3 generator query params endpoint with object query param 1`] = `
"{
  \\"openapi\\": \\"3.0.2\\",
  \\"info\\": {
    \\"title\\": \\"contract\\",
    \\"version\\": \\"0.0.0\\"
  },
  \\"paths\\": {
    \\"/companies\\": {
      \\"get\\": {
        \\"operationId\\": \\"EndpointWithArrayQueryParam\\",
        \\"parameters\\": [
          {
            \\"name\\": \\"pagination\\",
            \\"in\\": \\"query\\",
            \\"style\\": \\"deepObject\\",
            \\"explode\\": true,
            \\"required\\": true,
            \\"schema\\": {
              \\"type\\": \\"object\\",
              \\"properties\\": {
                \\"page\\": {
                  \\"type\\": \\"integer\\",
                  \\"format\\": \\"int32\\"
                },
                \\"order\\": {
                  \\"type\\": \\"string\\",
                  \\"enum\\": [
                    \\"desc\\",
                    \\"asc\\"
                  ]
                }
              },
              \\"required\\": [
                \\"page\\",
                \\"order\\"
              ]
            }
          }
        ],
        \\"responses\\": {
          \\"200\\": {
            \\"description\\": \\"200 response\\",
            \\"content\\": {
              \\"application/json\\": {
                \\"schema\\": {
                  \\"type\\": \\"array\\",
                  \\"items\\": {
                    \\"type\\": \\"object\\",
                    \\"properties\\": {
                      \\"id\\": {
                        \\"type\\": \\"string\\"
                      },
                      \\"name\\": {
                        \\"type\\": \\"string\\"
                      }
                    },
                    \\"required\\": [
                      \\"id\\",
                      \\"name\\"
                    ]
                  }
                }
              }
            }
          }
        }
      }
    }
  }
}"
`;

exports[`OpenAPI 3 generator query params endpoint with query params 1`] = `
"{
  \\"openapi\\": \\"3.0.2\\",
  \\"info\\": {
    \\"title\\": \\"contract\\",
    \\"version\\": \\"0.0.0\\"
  },
  \\"paths\\": {
    \\"/companies\\": {
      \\"get\\": {
        \\"operationId\\": \\"EndpointWithQueryParams\\",
        \\"parameters\\": [
          {
            \\"name\\": \\"country\\",
            \\"in\\": \\"query\\",
            \\"required\\": true,
            \\"schema\\": {
              \\"type\\": \\"string\\"
            }
          },
          {
            \\"name\\": \\"postcode\\",
            \\"in\\": \\"query\\",
            \\"required\\": false,
            \\"schema\\": {
              \\"type\\": \\"string\\"
            }
          }
        ],
        \\"responses\\": {
          \\"200\\": {
            \\"description\\": \\"200 response\\",
            \\"content\\": {
              \\"application/json\\": {
                \\"schema\\": {
                  \\"type\\": \\"array\\",
                  \\"items\\": {
                    \\"type\\": \\"object\\",
                    \\"properties\\": {
                      \\"id\\": {
                        \\"type\\": \\"string\\"
                      },
                      \\"name\\": {
                        \\"type\\": \\"string\\"
                      }
                    },
                    \\"required\\": [
                      \\"id\\",
                      \\"name\\"
                    ]
                  }
                }
              }
            }
          }
        }
      }
    }
  }
}"
`;

exports[`OpenAPI 3 generator responses endpoint specific and default responses 1`] = `
"{
  \\"openapi\\": \\"3.0.2\\",
  \\"info\\": {
    \\"title\\": \\"contract\\",
    \\"version\\": \\"0.0.0\\"
  },
  \\"paths\\": {
    \\"/users/{id}\\": {
      \\"get\\": {
        \\"operationId\\": \\"EndpointWithResponses\\",
        \\"parameters\\": [
          {
            \\"name\\": \\"id\\",
            \\"in\\": \\"path\\",
            \\"required\\": true,
            \\"schema\\": {
              \\"type\\": \\"string\\"
            }
          }
        ],
        \\"responses\\": {
          \\"200\\": {
            \\"description\\": \\"200 response\\",
            \\"content\\": {
              \\"application/json\\": {
                \\"schema\\": {
                  \\"type\\": \\"object\\",
                  \\"properties\\": {
                    \\"id\\": {
                      \\"type\\": \\"string\\"
                    },
                    \\"name\\": {
                      \\"type\\": \\"string\\"
                    }
                  },
                  \\"required\\": [
                    \\"id\\",
                    \\"name\\"
                  ]
                }
              }
            }
          },
          \\"404\\": {
            \\"description\\": \\"404 response\\",
            \\"content\\": {
              \\"application/json\\": {
                \\"schema\\": {
                  \\"type\\": \\"object\\",
                  \\"properties\\": {
                    \\"message\\": {
                      \\"type\\": \\"string\\"
                    },
                    \\"status\\": {
                      \\"type\\": \\"string\\"
                    }
                  },
                  \\"required\\": [
                    \\"message\\",
                    \\"status\\"
                  ]
                }
              }
            }
          },
          \\"default\\": {
            \\"description\\": \\"default response\\",
            \\"content\\": {
              \\"application/json\\": {
                \\"schema\\": {
                  \\"type\\": \\"object\\",
                  \\"properties\\": {
                    \\"message\\": {
                      \\"type\\": \\"string\\"
                    }
                  },
                  \\"required\\": [
                    \\"message\\"
                  ]
                }
              }
            }
          }
        }
      }
    }
  }
}"
`;

exports[`OpenAPI 3 generator schemaprops contract with schemaprops parses correctly to an openapi specification 1`] = `
"{
  \\"openapi\\": \\"3.0.2\\",
  \\"info\\": {
    \\"title\\": \\"contract\\",
    \\"version\\": \\"0.0.0\\"
  },
  \\"paths\\": {
    \\"/users\\": {
      \\"get\\": {
        \\"operationId\\": \\"EndpointWithExampleOnHeaders\\",
        \\"parameters\\": [
          {
            \\"name\\": \\"status\\",
            \\"in\\": \\"header\\",
            \\"description\\": \\"property-schemaprop description for string\\",
            \\"required\\": true,
            \\"schema\\": {
              \\"type\\": \\"string\\",
              \\"minLength\\": 12,
              \\"maxLength\\": 20,
              \\"pattern\\": \\"^[0-9a-z_]+$\\"
            }
          },
          {
            \\"name\\": \\"size\\",
            \\"in\\": \\"header\\",
            \\"description\\": \\"property-schemaprop description for integer\\",
            \\"required\\": true,
            \\"schema\\": {
              \\"type\\": \\"integer\\",
              \\"format\\": \\"int32\\",
              \\"minimum\\": 1,
              \\"maximum\\": 100,
              \\"default\\": 42
            }
          }
        ],
        \\"responses\\": {
          \\"200\\": {
            \\"description\\": \\"200 response\\",
            \\"content\\": {
              \\"application/json\\": {
                \\"schema\\": {
                  \\"type\\": \\"array\\",
                  \\"items\\": {
                    \\"type\\": \\"object\\",
                    \\"properties\\": {
                      \\"id\\": {
                        \\"type\\": \\"string\\"
                      },
                      \\"name\\": {
                        \\"type\\": \\"string\\"
                      }
                    },
                    \\"required\\": [
                      \\"id\\",
                      \\"name\\"
                    ]
                  }
                }
              }
            }
          }
        }
      }
    }
  }
}"
`;

exports[`OpenAPI 3 generator security contract with security header 1`] = `
"{
  \\"openapi\\": \\"3.0.2\\",
  \\"info\\": {
    \\"title\\": \\"contract\\",
    \\"version\\": \\"0.0.0\\"
  },
  \\"paths\\": {
    \\"/users\\": {
      \\"get\\": {
        \\"operationId\\": \\"GetEndpoint\\",
        \\"responses\\": {
          \\"200\\": {
            \\"description\\": \\"200 response\\",
            \\"content\\": {
              \\"application/json\\": {
                \\"schema\\": {
                  \\"type\\": \\"array\\",
                  \\"items\\": {
                    \\"type\\": \\"object\\",
                    \\"properties\\": {
                      \\"id\\": {
                        \\"type\\": \\"string\\"
                      },
                      \\"name\\": {
                        \\"type\\": \\"string\\"
                      }
                    },
                    \\"required\\": [
                      \\"id\\",
                      \\"name\\"
                    ]
                  }
                }
              }
            }
          }
        }
      }
    }
  },
  \\"components\\": {
    \\"securitySchemes\\": {
      \\"SecurityHeader\\": {
        \\"type\\": \\"apiKey\\",
        \\"in\\": \\"header\\",
        \\"name\\": \\"security-header\\"
      }
    }
  },
  \\"security\\": [
    {
      \\"SecurityHeader\\": []
    }
  ]
}"
`;

exports[`OpenAPI 3 generator versioned contract produces a versioned OpenAPI 3 1`] = `
"{
  \\"openapi\\": \\"3.0.2\\",
  \\"info\\": {
    \\"title\\": \\"versioned-contract\\",
    \\"version\\": \\"0.1.0\\"
  },
  \\"paths\\": {}
}"
`;
